# Pupilware

./: .gitignore  CMakeLists.txt  README.md
Pupilware/: PWFaceLandmarkDetector.cpp  PWFaceLandmarkDetector.hpp  PupilMeta.cpp  PupilMeta.hpp  Pupilware.cpp  Pupilware.hpp  constants.h  main.cpp  preHeader.hpp
Pupilware.xcodeproj/: project.pbxproj
Pupilware.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Pupilware.xcodeproj/project.xcworkspace/xcuserdata/redeian.xcuserdatad/: UserInterfaceState.xcuserstate
Pupilware.xcodeproj/xcuserdata/redeian.xcuserdatad/xcschemes/: Pupilware.xcscheme  xcschememanagement.plist
Pupilware/Algorithm/: ALOfflineFile.cpp  ALOfflineFile.hpp  BlinkDetection.cpp  DummyAlgo.cpp  DummyAlgo.hpp  IPupilAlgorithm.cpp  IPupilAlgorithm.hpp  MDStarbust.cpp  MDStarbust.hpp  MDStarbustNeo.cpp  MDStarbustNeo.hpp  MaximumCircleFit.cpp  MaximumCircleFit2.cpp  MaximumCircleFit2.hpp  PWAlgorithm.cpp  PWAlgorithm.hpp  PWDataModel.cpp  PWFaceMeta.cpp  PWFaceMeta.hpp  PixelCount.cpp  PixelCount.hpp  PupilMeta.cpp  PupilMeta.hpp  TwoLevelSnake.cpp  TwoLevelSnake.hpp
Pupilware/Helpers/: CVWindow.cpp  CWCVHelper.cpp  CWCVHelper.hpp  CWUIHelper.cpp  CWUIHelper.hpp  helpers.cpp
Pupilware/Helpers/math/: Ransac.cpp  Snakuscules.cpp  Snakuscules.hpp
Pupilware/ImageProcessing/: BasicImageProcessor.cpp  BasicImageProcessor.hpp  IImageProcessor.cpp  IImageProcessor.hpp  SimpleImageSegmenter.cpp  SimpleImageSegmenter.hpp
Pupilware/SignalProcessing/: BasicSignalProcessor.cpp  SignalProcessingHelper.cpp  SignalProcessingHelper.hpp  SimpleSignalProcessor.cpp  sgsmooth.C  sgsmooth.h
Pupilware/UI/: MainFrame.fbp
Pupilware/etc/: CVWindow.cpp  CVWindow.hpp  CWCVUtility.cpp  CWCVUtility.hpp  CWUIHelper.cpp  CWUIHelper.hpp  GraphUtils.cpp  PWGraph.cpp  PWGraph.hpp
